--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "zalopay": "nodemon zalo/zalopay.js",
-    "momo": "nodemon momo/momo.js"
+    "momo": "nodemon momo/momo.js",
+    "ping": "nodemon ping.js",
+    "dev": "concurrently \"npm run zalopay\" \"npm run ping\""
   },
-  "author": "",
+  "author": "Chiến Target",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.8",
@@ -19,7 +21,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "moment": "^2.30.1",
-    "qs": "^6.13.0"
+    "qs": "^6.13.0",
+    "concurrently": "^8.2.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
